# Worky

./: openapi.json  pyproject.toml
worky-backend/: .env.example  .gitignore  main.py  requirements.txt
worky-backend/app/: __init__.py
worky-backend/app/auth/: dependencies.py  models.py  repository.py  router.py  service.py
worky-backend/app/bob/: __init__.py  cli_service.py  dependencies.py  mock_service.py  models.py  service.py  settings.py
worky-backend/app/config/: __init__.py  settings.py
worky-backend/app/connectors/: __init__.py  base.py  models.py
worky-backend/app/context_builder/: __init__.py  builder.py  models.py
worky-backend/app/recommendations/: __init__.py  dependencies.py  exceptions.py  router.py  service.py
worky-backend/docs/: ARCHITECTURE.md  CHANGELOG.md  CONNECTOR_GUIDE.md  GIT_WORKFLOW.md  IMPLEMENTATION_CHECKLIST.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  TEAM_RULES.md  TEAM_WORKFLOW.md
worky-backend/docs/architecture/: ARCHITECTURE.md  DECISIONS.md
worky-backend/docs/development/: CONNECTOR_GUIDE.md  CONTRIBUTING.md
worky-backend/docs/planning/: ROADMAP.md  TEAM_WORKFLOW.md
worky-backend/docs/reference/: REPOSITORY_STRUCTURE.md
worky-backend/docs/templates/: CONNECTOR_TEMPLATE.md
worky-backend/tests/: conftest.py
worky-backend/tests/auth/: test_router.py  test_service.py
worky-backend/tests/bob/: __init__.py  test_cli_service.py  test_ibm_bob_service.py  (+1 more)
worky-frontend/: .env.example  DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
worky-frontend/src/: App.tsx  index.css
(+83 files in other folders)
