[project]
name = "worky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==42.0.8",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "respx==0.21.1",
    "uvicorn[standard]==0.30.1",
]
